[project]
name = "inferno-api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Daniel Pintard", email = "danielpintard@yahoo.com"},
]
dependencies = []
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
